# agentstack

./: Dockerfile.postgres  Dockerfile.prest-production  README-PostgreSQL.md  README.md  docker-compose.litellm-production.yml  docker-compose.phoenix-observability.yml  docker-compose.prest-production.yml  docker-compose.production-postgres.yml  docker-compose.test-db.yml  docker-compose.yml  main.py  pyproject.toml  test_worker.py
config/grafana/dashboards/phoenix-llm/: phoenix-llm-observability-overview.json
config/litellm/: litellm-config.yaml
config/litellm-prometheus/: prometheus.yml
config/litellm-prometheus/rules/: litellm-alerts.yml
config/otel-collector/: config.yaml
config/pgadmin/: servers.json
config/postgresql/: pg_hba.conf  pg_ident.conf  postgresql.conf
config/prest/: prest.toml
config/prometheus/: prometheus.yml
config/prometheus/rules/: phoenix-llm-alerts.yml
configs/: litellm_config.yaml
docs/: PREST-PRODUCTION-GUIDE.md  phoenix-observability-guide.md
init/: 01_extensions.sql  01_extensions_production.sql
scripts/: archive-wal.sh  backup-verify.sh  deploy-postgres.sh  entrypoint.sh  health-check.sh  test_database.py
scripts/deployment/: deploy-prest-production.sh  validate-prest-config.sh
scripts/phoenix/: setup-phoenix-observability.sh
scripts/prest/: entrypoint.sh  health-check.sh  wait-for-it.sh
src/agentstack_worker/: Dockerfile  __init__.py  celery_app.py  requirements.txt  tasks.py  tasks.py.bak  tracing.py
src/agentstack_worker/utils/: __init__.py  database.py  docling_parser.py  embeddings.py
(+2 files in other folders)
