[project]
name = "agentstack-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix[otel]>=12.18.0",
    "celery[redis]>=5.6.0",
    "docling>=2.63.0",
    "httpx>=0.28.1",
    "litellm>=1.80.7",
    "openai>=2.8.1",
    "openinference-instrumentation-openai>=0.1.40",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
